<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="pref_rummy_settings"
        android:title="@string/preferences_rummy">

        <EditTextPreference
            android:defaultValue="-10"
            android:inputType="numberSigned"
            android:key="rummy_winner_score"
            android:summary="@string/pref_summary_winner_score"
            android:title="@string/preferences_winner_score" />

        <EditTextPreference
            android:defaultValue="100"
            android:inputType="number"
            android:key="rummy_loser_score"
            android:summary="@string/pref_summary_loser_score"
            android:title="@string/preferences_loser_score" />

        <EditTextPreference
            android:defaultValue="100"
            android:inputType="number"
            android:key="rummy_defaut_final_score"
            android:summary="@string/pref_summary_default_rummy_final_score"
            android:title="@string/preferences_default_rummy_final_score" />

    </PreferenceCategory>
</PreferenceScreen>

