<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="rachma.tn.team.binary.rachma.rummy.RummyScoreTaking">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <!-- Player 1 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/player1name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/player1Score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/round_shape"
                android:gravity="center"
                android:hint="@string/score"
                android:inputType="numberSigned"
                android:padding="10dp"
                android:textColor="@color/colorPrimary" />

            <CheckBox
                android:id="@+id/player1lost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lost" />

            <CheckBox
                android:id="@+id/player1won"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/won" />

        </LinearLayout>


        <!-- Player 2 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/player2name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/player2Score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/round_shape"
                android:gravity="center"
                android:hint="@string/score"
                android:inputType="numberSigned"
                android:padding="10dp"
                android:textColor="@color/colorPrimary"
                />

            <CheckBox
                android:id="@+id/player2lost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lost" />

            <CheckBox
                android:id="@+id/player2won"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/won" />

        </LinearLayout>

        <!-- Player 3 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/player3name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/player3Score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/round_shape"
                android:gravity="center"
                android:hint="@string/score"
                android:inputType="numberSigned"
                android:padding="10dp"
                android:textColor="@color/colorPrimary"
                android:visibility="gone"

                />

            <CheckBox
                android:id="@+id/player3lost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lost" />

            <CheckBox
                android:id="@+id/player3won"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/won" />

        </LinearLayout>


        <!-- Player 4 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/player4name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/player4Score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/round_shape"
                android:gravity="center"
                android:hint="@string/score"
                android:inputType="numberSigned"
                android:padding="10dp"
                android:textColor="@color/colorPrimary"
                android:visibility="gone"

                />

            <CheckBox
                android:id="@+id/player4lost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lost" />

            <CheckBox
                android:id="@+id/player4won"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/won" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/saveScores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_score" />

    <TextView
        android:id="@+id/firstPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/secondPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/thirdPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/fourthPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
